// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Show navbar contact > Nav component renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nav"
      >
        <a
          href="/login"
        />
        <a
          href="/join"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="nav"
    >
      <a
        href="/login"
      />
      <a
        href="/join"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Show navbar contact > renders text correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="Shadow navbar navbar-expand-lg navbar-light bg-light"
      >
        <div
          class="container"
        >
          <span
            class="navbar-brand"
          >
            <a
              href="/"
            >
              <img
                alt="React Bootstrap logo"
                height="70"
                src="/logo.png"
                width="140"
              />
            </a>
          </span>
          <button
            aria-controls="responsive-navbar-nav"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="responsive-navbar-nav"
          >
            <div
              class="justify-content-end flex-grow-1 me-5 navbar-nav"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="/Contact"
                href="/Contact"
              >
                Contacto
              </a>
            </div>
            <div
              class="navbar-nav"
            >
              <a
                href="/Login"
              >
                <button
                  class="me-4 btn btn-custom btn btn-primary"
                  type="button"
                >
                  Iniciar Sesión
                </button>
              </a>
            </div>
            <div
              class="navbar-nav"
            >
              <a
                href="/Join"
              >
                <button
                  class="me-4 btn btn-custom btn btn-primary"
                  type="button"
                >
                  Registrar
                </button>
              </a>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="Shadow navbar navbar-expand-lg navbar-light bg-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="/"
          >
            <img
              alt="React Bootstrap logo"
              height="70"
              src="/logo.png"
              width="140"
            />
          </a>
        </span>
        <button
          aria-controls="responsive-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="responsive-navbar-nav"
        >
          <div
            class="justify-content-end flex-grow-1 me-5 navbar-nav"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="/Contact"
              href="/Contact"
            >
              Contacto
            </a>
          </div>
          <div
            class="navbar-nav"
          >
            <a
              href="/Login"
            >
              <button
                class="me-4 btn btn-custom btn btn-primary"
                type="button"
              >
                Iniciar Sesión
              </button>
            </a>
          </div>
          <div
            class="navbar-nav"
          >
            <a
              href="/Join"
            >
              <button
                class="me-4 btn btn-custom btn btn-primary"
                type="button"
              >
                Registrar
              </button>
            </a>
          </div>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
